[package]
name = "qsc_formatter"

version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "cargo"] }
qsc_data_structures = { path = "../qsc_data_structures" }
qsc_frontend = { path = "../qsc_frontend" }

[dev-dependencies]
expect-test = { workspace = true }
indoc = { workspace = true }

[lib]
doctest = false

[[bin]]
name = "qsc_formatter"
bench = false
test = false

