[package]
name = "qsc_frontend"

version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
enum-iterator = { workspace = true }
miette = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
qsc_ast = { path = "../qsc_ast" }
qsc_data_structures = { path = "../qsc_data_structures" }
qsc_hir = { path = "../qsc_hir" }
qsc_library = { path = "../../library" }
qsc_parse = { path = "../qsc_parse" }
thiserror = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
indoc = { workspace = true }
