[package]
name = "qsc_hir"
version = "0.0.0"

authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
indenter = "0.2"
num-bigint = { workspace = true }
qsc_data_structures = { path = "../qsc_data_structures" }
