[package]
name = "qsc_hir"

version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
indenter = { workspace = true }
num-bigint = { workspace = true }
qsc_data_structures = { path = "../qsc_data_structures" }
rustc-hash = { workspace = true }

[lib]
doctest = false
