[package]
name = "qsc_linter"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
miette = { workspace = true }
qsc_ast = { path = "../qsc_ast" }
qsc_hir = { path = "../qsc_hir" }
qsc_data_structures = { path = "../qsc_data_structures" }
thiserror = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
qsc_parse = { path = "../qsc_parse" }

[lib]
doctest = false
