[package]
name = "qsc_lowerer"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
qsc_data_structures = { path = "../qsc_data_structures" }
qsc_fir = { path = "../qsc_fir" }
qsc_hir = { path = "../qsc_hir" }

[lints]
workspace = true
