[package]
name = "qsc_manifest"

authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true


[dependencies]
serde_json = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
